kubernetes/apps/network/internal/remote-services/services/kvm1.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-kvm1
  namespace: network
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
      name: http
  type: ExternalName
  externalName: idrac.rack.home.internal
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-kvm1
  namespace: network
  annotations:
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "kvm1"
    gethomepage.dev/description: "iDRAC Management Interface"
    gethomepage.dev/href: "https://idrac.rack.home.internal"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "idrac.png"
    gethomepage.dev/siteMonitor: https://idrac.rack.home.internal:443
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-verify: "false"
spec:
  ingressClassName: internal
  rules:
    - host: "kvm1.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-kvm1
              port:
                number: 443
  tls:
    - hosts:
        - "kvm1.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
